# PulseDB

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: core_operations.rs  lifecycle.rs  scaling.rs  sync.rs  workloads.rs
docs/: 01-PRD.md  02-SRS.md  03-Architecture.md  08-Testing.md  09-Developer-Guide.md  10-Backlog.md  11-ProjectPlan.md
docs/adr/: ADR-001-redb-for-storage.md  ADR-002-hnswlib-for-vector-index.md  ADR-004-rich-experience-types.md  README.md
docs/phases/: Phase-2-Substrate.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_create_collective.rs  fuzz_record_experience.rs  fuzz_search_similar.rs
src/: config.rs  db.rs  error.rs  lib.rs  types.rs
src/activity/: mod.rs  types.rs
src/collective/: mod.rs  types.rs
src/embedding/: mod.rs  onnx.rs
src/experience/: mod.rs  types.rs  validation.rs
src/insight/: mod.rs  types.rs
src/relation/: mod.rs  types.rs
src/search/: context.rs  filter.rs  mod.rs
src/storage/: mod.rs  redb.rs  schema.rs
src/substrate/: impl.rs  mod.rs
src/sync/: applier.rs  config.rs  error.rs  guard.rs  manager.rs  mod.rs  progress.rs  pusher.rs  server.rs  transport.rs  transport_http.rs  transport_mem.rs  types.rs
src/vector/: hnsw.rs  mod.rs
src/watch/: lock.rs  mod.rs  poll.rs  types.rs
tests/: activity.rs  collective.rs  context_candidates.rs  cross_process_watch.rs  embedding_onnx.rs  experience.rs  insight.rs  lifecycle.rs  property_tests.rs  pulsevision_apis.rs  recent_experiences.rs  relation.rs  search_similar.rs  storage_acid.rs  substrate_integration.rs  sync_engine.rs  sync_foundation.rs  sync_http.rs  vector_index.rs  watch.rs
