[package]
name = "pulsedb"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["PulseDB Team"]
description = "Embedded database for agentic AI systems - the substrate for hive mind architectures"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pulsehive/pulsedb"
documentation = "https://docs.rs/pulsedb"
keywords = ["database", "embedded", "ai", "agents", "vector"]
categories = ["database", "embedded"]
readme = "README.md"

[features]
default = []
builtin-embeddings = ["ort"]

[dependencies]
# Storage - redb is a pure Rust embedded KV store with ACID transactions
redb = "2.1"

# Serialization - bincode is fast and compact for internal storage
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

# IDs - UUID v7 provides time-ordered unique identifiers
uuid = { version = "1.0", features = ["v7", "serde"] }

# Error handling - thiserror derives Error trait with minimal boilerplate
thiserror = "1.0"

# Observability - tracing provides structured logging with spans
tracing = "0.1"

# Optional: ONNX runtime for builtin embedding generation
ort = { version = "2.0.0-rc.9", optional = true }

[dev-dependencies]
# Testing utilities
tempfile = "3.0"

# Benchmarking framework
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "lifecycle"
harness = false

[profile.release]
lto = true
codegen-units = 1

[profile.dev]
# Faster builds during development
opt-level = 0
debug = true

[profile.test]
# Match dev profile for consistent behavior
opt-level = 0
debug = true
