[package]
name = "pulsedb-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tempfile = "3.0"

[dependencies.pulsedb]
path = ".."

[[bin]]
name = "fuzz_record_experience"
path = "fuzz_targets/fuzz_record_experience.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_search_similar"
path = "fuzz_targets/fuzz_search_similar.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_create_collective"
path = "fuzz_targets/fuzz_create_collective.rs"
test = false
doc = false
bench = false
